--- a/index.Rmd
+++ b/index.Rmd
@@ -365,8 +365,8 @@ Write a shell script that:
     - Tip!!!: `gdalwarp -t_srs EPSG:4326 $fntemp $fnout`
 
 Submit the text of your shell script via Blackboard in the "Script Review Center" before tomorrow (930u).
-Make sure your script is clear and reproducible, and let is test by at least one other team. 
-You can upload your shell script as attachment or you can also copy the code in the BlackBoard reply zone (the other team needs to make it excecutable in order to test it.
+Make sure your script is clear and reproducible, and let it test by at least one other team. 
+You can copy the code in the BlackBoard review center (the other team needs to make it excecutable in order to test it).
 
 *Do not forget to add a teamname, and members and date of script at the top of your script.*
 
