Update to instructions on connecting via NFS
Three ports are needed instead of one, since Windows 7 only supports NFSv3

--- a/index.Rmd
+++ b/index.Rmd
@@ -99,9 +99,9 @@ The space is then available in the *userdata* directory within your user directo
 
 You might want to transfer files to or from the VM. There are two ways to do so. The more convenient method is to use *Network File System* (NFS) to access the VM drive as if it was a local hard drive. To do that, you need to establish a secure connection to the VM and map the network drive to your PC.
 
-First, start *Git Bash*. This will open a terminal window. In it, enter: `ssh -NL 2049:localhost:2049 ubuntu@<ip>` where `<ip>` is the IP address of your VM. This will establish a secure SSH connection to the VM on port 2049. You can use this method for other applications and ports as well, such as to access RStudio Server. When you are done, to disconnect the secure connection, press Ctrl+C in the Git Bash window.
+First, start *Git Bash*. This will open a terminal window. In it, enter: `ssh -N -L 2049:localhost:2049 -L 2050:localhost:2050 -L 111:localhost:111 ubuntu@<ip>` where `<ip>` is the IP address of your VM. This will establish a secure SSH connection to the VM on ports 2049, 2050 and 111. You can use this method for other applications and ports as well (such as to access RStudio Server on some VMs). When you are done, to disconnect the secure connection, press Ctrl+C in the Git Bash window.
 
-To map the network drive, right-click on your desktop, choose *New* → *Shortcut*, and enter `<ip>:/home/ubuntu/geoscripting` (again, use the IP of your VM). Double-clicking on the shortcut, you will see an empty folder. It is the */home/ubuntu/geoscripting* directory on the VM, and you can drag and drop files and folders to and from it.
+To map the network drive, open My Computer, press the *Map Network Drive* button, and enter `localhost:/home/ubuntu/userdata` (again, use the IP of your VM). Double-clicking on the shortcut, you will see an empty folder. It is the */home/ubuntu/userdata* directory on the VM, and you can drag and drop files and folders to and from it. To disconnect, right-click on the network drive and click *Disconnect*, and close the *Git Bash* window that is running the `ssh` command.
 
 Another method to tranfer files is using the *Secure File Transfter Protocol* (SFTP). It is a command-line program that comes with SSH. You can use it for transferring any file you can access using SSH, so it is not limited to prespecified directories like NFS is. So you can use it to get or send files outside of your *userdata* directory.
 
